# sql-analyst-agent

./: .env.example  .gitignore  README.md  agent.py  pyproject.toml  seed_data.py
.langgraph_api/: .langgraph_ops.pckl
data/: ecommerce.db
tools/: __init__.py  sql_tools.py
