[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sql-analyst-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents[quickjs]>=0.6.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.5.0",
    "langgraph-checkpoint-sqlite",
    "faker>=28.0.0",
]
